--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack --mode production --env production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json --watchAll"
   },
@@ -26,6 +27,7 @@
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.3.1",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
