--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack --mode production --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json --watchAll"
+    "test": "jest --config=jest.config.json --watchAll",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +27,7 @@
     "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
+    "express": "^4.17.1",
     "jest": "^27.3.1",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.4.5",
