--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack --mode production --env production",
     "dev-server": "webpack-dev-server",
@@ -25,11 +24,7 @@
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
     "express": "^4.17.1",
-    "jest": "^27.3.1",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -41,17 +36,20 @@
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
-    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.2",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
-    "webpack": "^5.61.0",
-    "webpack-dev-server": "^4.4.0"
+    "webpack": "^5.61.0"
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
+    "jest": "^27.3.1",
     "raf": "^3.4.1",
-    "webpack-cli": "^4.9.1"
+    "react-test-renderer": "^17.0.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
