--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack --mode production --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json --watchAll",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watchAll",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -25,6 +25,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "express": "^4.17.1",
+    "firebase": "^9.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -38,6 +39,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "uuid": "^8.3.2",
@@ -45,6 +48,8 @@
     "webpack": "^5.61.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
     "jest": "^27.3.1",
