--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^6.5.1",
     "express": "^4.17.1",
     "firebase": "^9.5.0",
+    "history": "^5.1.0",
     "mini-css-extract-plugin": "^2.4.5",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -37,7 +38,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.1",
+    "react-router-dom": "^6.1.0",
     "redux": "^4.1.2",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.1",
